# intiface-central

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Justfile  LICENSE.md  README.md  analysis_options.yaml  design.md  flutter_rust_bridge.yaml  intiface-central-installer.iss  pubspec.yaml
.cargo/: config.local.toml
.forgejo/workflows/: platform-builds.yml  windows-build.yml  windows-signing-smoke.yml
.github/workflows/: central.yml  test.yml
android/: .gitignore  build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/libs/: droidplug-release.aar
assets/: about-android.md  about.md  help.md  news.md
ci/export-options/: ios-app-store-connect.plist  macos-app-store-connect.plist  macos-developer-id.plist
docs/: app-mode-settings.md  device-status-card-icons.md
docs/adr/: 0001-flutter-for-cross-platform-gui.md  0002-bloc-state-management.md  0003-single-ffi-pipe.md
docs/design-plans/: 2026-04-25-device-tab-redesign.md  2026-05-22-gui-test-system.md  2026-05-23-doc-screenshot-callouts.md  2026-05-23-mobile-mdns-fixes.md
integration_test/: app_test.dart  docs_screenshots_test.dart  simple_test.dart  test_app.dart
integration_test/flows/: device_connect_test.dart  engine_lifecycle_test.dart
integration_test/helpers/: app_environment.dart  pump_until.dart  rust_lib_lifecycle.dart  sim_device_setup.dart
intiface-engine-flutter-bridge/: CHANGELOG.md  Cargo.toml  Makefile.toml  build.rs
intiface-engine-flutter-bridge/intiface_engine_flutter_bridge.xcodeproj/: project.pbxproj
intiface-engine-flutter-bridge/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  in_process_frontend.rs  lib.rs  logging.rs
intiface-engine-flutter-bridge/src/api/: buttplug_mirror_types.rs  mod.rs  simple.rs
intiface-engine-flutter-bridge/src/mobile_init/: error.rs
intiface-engine-flutter-bridge/src/mobile_init/setup/: android.rs  not_android.rs
intiface_central/: .gitignore  CHANGELOG.md  pubspec.yaml
intiface_central/android/: build.gradle
intiface_central/assets/: about.md  news.md
intiface_central/intiface-engine-flutter-bridge/: Makefile.toml  build.rs
intiface_central/lib/: about_widget.dart  asset_cubit.dart  body_widget.dart  control_widget.dart  device_widget.dart  ffi.dart  intiface_central_app.dart  main.dart  main_core.dart  main_desktop.dart  main_mobile.dart  markdown_widget.dart  navigation_cubit.dart  network_info_cubit.dart  news_widget.dart  settings_widget.dart
intiface_central/windows/: CMakeLists.txt
intiface_engine_flutter/: justfile  pubspec.yaml
intiface_engine_flutter/android/: settings.gradle
intiface_engine_flutter/intiface-engine-flutter-bridge/: CHANGELOG.md  Cargo.toml  README.md
intiface_engine_flutter/lib/: bridge_generated.dart  ffi.dart  intiface_engine_flutter.dart
intiface_engine_flutter/test/: btleplugtest_method_channel_test.dart
intiface_engine_flutter_plugin/: .gitignore  README.md  pubspec.yaml
intiface_engine_flutter_plugin/android/: build.gradle
intiface_engine_flutter_plugin/example/: README.md  pubspec.yaml
intiface_engine_flutter_plugin/intiface-engine-flutter-bridge/: Cargo.toml  Makefile.toml
intiface_engine_flutter_plugin/intiface-engine-flutter-bridge/src/: Info.plist  api.rs  bridge_generated.io.rs  bridge_generated.rs  in_process_frontend.rs
intiface_engine_flutter_plugin/intiface-engine-flutter-bridge/src/mobile_init/: error.rs  setup.rs
intiface_engine_flutter_plugin/intiface-engine-flutter-bridge/src/mobile_init/setup/: android.rs  ios.rs
intiface_engine_flutter_plugin/ios/: intiface_engine_flutter_plugin.podspec
intiface_engine_flutter_plugin/lib/: bridge_generated.dart  ffi.dart
intiface_engine_flutter_plugin/test/: btleplugtest_test.dart
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_reset_cubit.dart  body_widget.dart  bridge_generated.dart  control_widget.dart  device_config_widget.dart  device_control_widget.dart  device_widget.dart  ffi.dart  gui_settings_cubit.dart  intiface_central_app.dart  log_widget.dart  main.dart  main_core.dart  main_desktop.dart  main_mobile.dart  markdown_widget.dart  navigation_cubit.dart  news_widget.dart  settings_widget.dart
lib/configuration/: intiface_configuration_cubit.dart  intiface_configuration_provider.dart  intiface_configuration_provider_shared_preferences.dart  intiface_configuration_repository.dart  user_device_configuration_file.dart  user_device_configuration_file.g.dart
lib/device/: backdoor_connector.dart  device_actuator_cubit.dart  device_controller_bloc.dart  device_cubit.dart  device_manager_bloc.dart
lib/device_configuration/: device_configuration.dart  user_device_configuration_cubit.dart  user_device_configuration_file.dart  user_device_configuration_file.g.dart
lib/engine/: engine_control_bloc.dart  engine_control_cubit.dart  engine_control_cubit.g.dart  engine_control_status.dart  engine_messages.dart  engine_messages.g.dart  engine_provider.dart  (+5 more)
linux/: CMakeLists.txt  com.nonpolynomial.intiface_central.metainfo.xml  my_application.cc  run_intiface_central  rust.cmake
macos/: Podfile
plans/: gui-test-system-implementation.md
rust/: CLAUDE.md  Cargo.toml
rust/rust_lib_intiface_central.xcodeproj/: project.pbxproj
rust/src/: frb_generated.rs  in_process_frontend.rs  lib.rs  logging.rs
rust/src/api/: device_config.rs  device_config_manager.rs  enums.rs  mod.rs  runtime.rs  simulated_devices.rs  specifiers.rs  util.rs
rust/src/mobile_init/: error.rs  mod.rs
rust/src/mobile_init/setup/: android.rs  not_android.rs
rust_builder/: pubspec.yaml
scripts/: create-dmg.sh  upload-sentry-symbols.sh
steam/: app_build_2273160.vdf  depot_build_2273161.vdf  depot_build_2273162.vdf  depot_build_2273163.vdf
test/: gui_integration_flows_test.dart  test_user_device_config.dart  widget_test.dart
test_driver/: docs_screenshots.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  rust.cmake
(+243 files in other folders)
