[package]
name = "intiface_engine_flutter_bridge"
version = "1.1.6"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Rust-Flutter bridge for IntifaceEngine" 
license = "BSD-3-Clause"
homepage = "http://intiface.com"
readme = "README.md"
edition = "2021"
exclude = [".vscode/**"]

[dependencies]
intiface-engine = "3.0.7"
# intiface-engine = { path = "../../intiface-engine" }
# THIS MUST ALWAYS MATCH THE VERSION USED BY INTIFACE ENGINE
# buttplug = { path = "../../buttplug/buttplug" }
buttplug = "9.0.7"
flutter_rust_bridge = "1.82.6"
log = "0.4.22"
lazy_static = "1.5.0"
once_cell = "1.20.2"
tokio = { version = "1.42.0", features = ["rt", "tracing"] }
anyhow = "1.0.94"
# THIS VERSION ABSOLUTELY, POSITIVELY MUST MATCH WHATEVER BUTTPLUG LINKS, OTHERWISE THERE WILL BE
# STATIC MISALIGNMENT AND YOU DO NOT WANT TO SPEND ANOTHER 3 DAYS DEBUGGING THAT.
# btleplug = { path = "../../btleplug" }
btleplug = "0.11.7"
thiserror = "2.0.9"
getset = "0.1.3"
serde = "1.0.216"
serde_json = "1.0.134"
async-trait = "0.1.83"
futures = "0.3.31"
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.19"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
sentry = { version = "0.35.0", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls"] }
crossbeam-channel = "0.5.14"

[target.'cfg(target_os = "android")'.dependencies]
# THESE VERSIONS ABSOLUTELY, POSITIVELY MUST MATCH WHATEVER BUTTPLUG LINKS, OTHERWISE THERE WILL BE
# STATIC MISALIGNMENT AND YOU DO NOT WANT TO SPEND ANOTHER 3 DAYS DEBUGGING THAT.
jni = "0.19.0"
jni-utils = "0.1.1"

[lib]
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
flutter_rust_bridge_codegen = "1.82.6"
