[package]
name = "rust_lib_intiface_central"
version = "2.0.0"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Rust-Flutter bridge for IntifaceEngine" 
license = "BSD-3-Clause"
homepage = "http://intiface.com"
readme = "README.md"
edition = "2021"
exclude = [".vscode/**"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.10.0", features = ["uuid"] }
buttplug_core = { path = "../../buttplug/crates/buttplug_core" }
buttplug_server = { path = "../../buttplug/crates/buttplug_server" }
buttplug_server_device_config = { path = "../../buttplug/crates/buttplug_server_device_config" }
intiface-engine = { path = "../../buttplug/crates/intiface_engine" }
# buttplug = "9.0.8"
log = "0.4.27"
lazy_static = "1.5.0"
once_cell = "1.21.3"
tokio = { version = "1.45.1", features = ["rt", "tracing"] }
anyhow = "1.0.98"
# THIS VERSION ABSOLUTELY, POSITIVELY MUST MATCH WHATEVER BUTTPLUG LINKS, OTHERWISE THERE WILL BE
# STATIC MISALIGNMENT AND YOU DO NOT WANT TO SPEND ANOTHER 3 DAYS DEBUGGING THAT.
# btleplug = { path = "../../btleplug" }
btleplug = "0.11.8"
thiserror = "2.0.12"
getset = "0.1.6"
serde = "1.0.219"
serde_json = "1.0.140"
async-trait = "0.1.88"
futures = "0.3.31"
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.19"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
sentry = { version = "0.41.0", default-features = false, features = ["backtrace", "contexts", "panic", "debug-images", "reqwest", "rustls"] }
crossbeam-channel = "0.5.15"
uuid = "1.17.0"

[target.'cfg(target_os = "android")'.dependencies]
# THESE VERSIONS ABSOLUTELY, POSITIVELY MUST MATCH WHATEVER BUTTPLUG LINKS, OTHERWISE THERE WILL BE
# STATIC MISALIGNMENT AND YOU DO NOT WANT TO SPEND ANOTHER 3 DAYS DEBUGGING THAT.
jni = "0.19.0"
jni-utils = "0.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
