[package]
name = "intiface-engine-flutter-bridge"
version = "0.0.1"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Rust-Flutter bridge for IntifaceEngine" 
license = "BSD-3-Clause"
homepage = "http://intiface.com"
readme = "README.md"
edition = "2021"
exclude = [".vscode/**"]

[dependencies]
# Make sure we don't build with default_features on, as it is assumed intiface-engine will normally
# build the desktop executable, which has DCMs that don't work on mobile.
intiface-engine = { version = "1.0.1", default_features = false, features=["crash_reporting"] }
flutter_rust_bridge = "1"
log = "0.4.17"
lazy_static = "1.4.0"
once_cell = "1.14.0"
tokio = "1.21.0"
anyhow = "1.0.64"
# THIS VERSION ABSOLUTELY, POSITIVELY MUST MATCH WHATEVER BUTTPLUG LINKS, OTHERWISE THERE WILL BE
# STATIC MISALIGNMENT AND YOU DO NOT WANT TO SPEND ANOTHER 3 DAYS DEBUGGING THAT.
btleplug = "0.10.0"
thiserror = "1.0.31"
getset = "0.1.2"
serde = "1.0.144"
serde_json = "1.0.85"
async-trait = "0.1.57"

[target.'cfg(target_os = "android")'.dependencies]
# THESE VERSIONS ABSOLUTELY, POSITIVELY MUST MATCH WHATEVER BUTTPLUG LINKS, OTHERWISE THERE WILL BE
# STATIC MISALIGNMENT AND YOU DO NOT WANT TO SPEND ANOTHER 3 DAYS DEBUGGING THAT.
jni = "0.19.0"
jni-utils = "0.1.0"
openssl-sys = {version = "0.9.75", features=["vendored"]}


[lib]
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
flutter_rust_bridge_codegen = "1.45.0"
